# argument-analysis-research

./: go.mod  go.sum  notes.md  repositories.bzl
cmd/endpoints/linker/: BUILD.bazel  service.go
cmd/keyword/: BUILD.bazel
cmd/linker/: BUILD.bazel
cmd/segmenter/: BUILD.bazel
pkg/api/: BUILD.bazel  handler.go
pkg/api/middlewares/: BUILD.bazel
pkg/linker/api/: BUILD.bazel
pkg/linker/api/v0/: BUILD.bazel  get_document.go  get_linker.go  new_document.go  new_linker.go
pkg/linker/async/: BUILD.bazel
pkg/linker/storage/: converter.go  registry.go
pkg/linker/storage/dgraph/: dgraph.go  mutations.go  queries.go
pkg/linker/storage/dgraph/converters/linking/v0/: base.go  linker.go
pkg/linker/v0/api/: linker.go
pkg/meta/: BUILD.bazel  accessor.go  context.go  group.go  group_test.go  incomplete.go  incomplete_test.go  meta.go  meta_test.go  object.go
pkg/meta/defaulters/: BUILD.bazel  meta.go  meta_test.go
pkg/meta/defaulters/linking/v0/: BUILD.bazel  document.go  document_test.go  linker.go  linker_test.go
pkg/meta/errors/: BUILD.bazel  kinds.go
pkg/meta/errors/v0/: BUILD.bazel  conversion.go  errors_test.go  generic.go  groups.go  invalidResource.go  notfound.go  unknownKind.go
pkg/meta/linking/v0/: BUILD.bazel  document.go  groups.go  link.go  linker.go  segment.go
pkg/mocks/: BUILD.bazel  storage_provider.go
pkg/service/: BUILD.bazel  init.go
pkg/storage/: BUILD.bazel  accessors.go  converter.go  defaulter.go  preparator.go  provider.go  provider_mock_test.go  registry.go  registry_test.go  repository.go  repository_test.go  resource.go
pkg/storage/dgraph/: BUILD.bazel  dgraph.go  helpers.go  provider.go
pkg/storage/dgraph/converters/linking/v0/: BUILD.bazel  document.go  document_test.go  groups.go  linker.go  linker_test.go  metadata.go  segment.go
pkg/storage/preparators/linking/v0/: BUILD.bazel  document.go
pkg/storage/registries/: BUILD.bazel  default.go  default_test.go
pkg/storage/repositories/: BUILD.bazel  default.go
