load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accessor.go",
        "context.go",
        "group.go",
        "incomplete.go",
        "meta.go",
        "object.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/meta",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/pkg/errors:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "group_test.go",
        "incomplete_test.go",
        "meta_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/google/gofuzz:go_default_library",
        "//vendor/k8s.io/utils/diff:go_default_library",
    ],
)
