load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["storage_provider.go"],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/meta/errors/v0:go_default_library",
        "//pkg/storage:go_default_library",
    ],
)
