load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["init.go"],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/contrib.go.opencensus.io/exporter/prometheus:go_default_library",
        "//vendor/github.com/kelseyhightower/envconfig:go_default_library",
        "//vendor/github.com/seibert-media/golibs/log:go_default_library",
        "//vendor/go.opencensus.io/stats/view:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
