load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dgraph.go",
        "helpers.go",
        "mutations.go",
        "queries.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/storage/dgraph",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/meta/errors/v0:go_default_library",
        "//pkg/meta/linking/v0:go_default_library",
        "@com_github_dgraph_io_dgo//:go_default_library",
        "@com_github_dgraph_io_dgo//protos/api:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
