load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dgraph.go",
        "helpers.go",
        "mutations.go",
        "provider.go",
        "queries.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/storage/dgraph",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/meta/errors/v0:go_default_library",
        "//pkg/meta/linking/v0:go_default_library",
        "//pkg/storage:go_default_library",
        "//vendor/github.com/dgraph-io/dgo:go_default_library",
        "//vendor/github.com/dgraph-io/dgo/protos/api:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
    ],
)
