load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["default.go"],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/storage/repositories",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/meta:go_default_library",
        "//pkg/storage:go_default_library",
        "//pkg/storage/registries:go_default_library",
        "//vendor/github.com/seibert-media/golibs/log:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
