load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "document.go",
        "groups.go",
        "link.go",
        "linker.go",
        "segment.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/meta/linking/v0",
    visibility = ["//visibility:public"],
    deps = ["//pkg/meta:go_default_library"],
)
