load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "document.go",
        "linker.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/meta/defaulters/linking/v0",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/meta/linking/v0:go_default_library",
        "@com_github_go_chi_chi//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "document_test.go",
        "linker_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//pkg/meta/linking/v0:go_default_library"],
)
