load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "document.go",
        "groups.go",
        "linker.go",
        "metadata.go",
        "segment.go",
    ],
    importpath = "github.com/canonical-debate-lab/argument-analysis-research/pkg/storage/dgraph/converters/linking/v0",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/meta:go_default_library",
        "//pkg/meta/errors/v0:go_default_library",
        "//pkg/meta/linking/v0:go_default_library",
        "//pkg/storage:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "document_test.go",
        "linker_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/meta:go_default_library",
        "//pkg/meta/linking/v0:go_default_library",
        "//vendor/github.com/google/gofuzz:go_default_library",
        "//vendor/k8s.io/utils/diff:go_default_library",
    ],
)
